Identify gc logging sent to stdout.